2005-07-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/break-substitution.cc (fast_substitute_grob_array): do
	fast_substitute_grob_array for all unordered grob_arrays.
	(substitute_grob): return Grob *. Saves packing/unpacking SCMs.
	(substitute_grob_array): optimize.

	* lily/align-interface.cc (set_axis): set ordered_ for 'elements

	* lily/include/grob-array.hh (class Grob_array): ordered_ member.

	* lily/parser.yy: revert $globalheader patch.
	
	* lily/include/translator.icc
	(IMPLEMENT_FETCH_PRECOMPUTABLE_METHODS): directly jump into
	Translator methods, without _static helper.
 
	* lily/grob-smob.cc (derived_mark): rename from
	do_derived_mark(). Return void.

	* scm/define-context-properties.scm
	(all-internal-translation-properties): remove tweakCount/tweakRank.

	* scm/output-lib.scm (begin-of-line-invisible): use vectors for
	predefined break-visibilities.

	* lily/item.cc (handle_prebroken_dependencies): use a vector of 3
	booleans for break-visibility.

	* Documentation/topdocs/NEWS.tely (Top): add note about engravers.

	* python/convertrules.py (conv): rule for Timing_translator. 

	* lily/include/translator.icc: new file. 

	* lily/paper-column-engraver.cc (process_music): new
	file. Separate Paper_column factory from Score_engraver.

	* lily/vertically-spaced-context-engraver.cc: administer
	spaceable-staves property of System.

	* lily/translator-group-ctors.cc: new file.

	* lily/context-property.cc (make_grob_from_properties): construct
	the right Grob class programmatically, looking at the class entry
	for the meta property.

	* lily/break-align-engraver.cc (stop_translation_timestep): call
	Break_align_interface::add_element() directly.

	* lily/context.cc (measure_position): measure_position() is now a
	normal function.

	* lily/include/translator.hh (class Translator): rename
	process_acknowledged_grobs() to process_acknowledged() and move to
	Translator.

	* scm/define-grobs.scm (all-grob-descriptions): add a 'class meta